--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 </head>
 <body>
 	<ul>
-		<li class="first">2</li>
-		<!--Ошибка-->
-		<li>2</li>
-		<li>3</li>
-		<li>4</li>
+		<li class="first"><a href="#">Главная</a></li>
+		<li><a href="#">О нас</a></li>
+		<li><a href="#">Новости</a></li>
+		<li><a href="#">Контакты</a></li>
 	</ul>
 	
 </body>
