--- a/index.html
+++ b/index.html
@@ -1,38 +1,25 @@
 <!DOCTYPE html>
-<html lang="ru">
-    <head>
-        <title>Испытание: строим сетку</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
-    <body>
-        <div class="header">
-            <div class="header-top layout-position">
-                Header
-                </div>
-            <div class="header-menu">
-                Menu
-                </div>
-            <div class="promo promo1">
-                Promo 1
-                </div>
-            <div class="promo promo2">
-                Promo 2
-                </div>
-            </div>
-        <div class="content layout-position">
-            <div class="colloum colloum-left">
-                Left
-                </div>
-        <div class="colloum colloum-main">
-            Main
-            </div>
-        <div class="colloum colloum-right">
-            Right
-            </div>
-            </div>
-        <div class="footer layout-position">
-            Footer
-            </div>
-    </body>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>test</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+	<div class="header-menu">
+		<ul>
+			<li class="page-name"><h1>Test</h1></li>
+			<li class="first"><a href="#">Главная</a></li>
+			<li><a href="#">О нас</a></li>
+			<li><a href="#">Новости</a></li>
+			<li><a href="#">Контакты</a></li>
+		</ul>
+	</div>
+	<div class="content">
+		<div>
+			<img  class="hellowen" src="image/4_11_11_2017.jpg">
+		</div>
+		<span><span class="fat">Далеко-далеко</span> за словесными горами в стране, гласных и согласных живут рыбные тексты. Она первую щеке вершину необходимыми страна, домах которой ведущими но даже до они семантика единственное маленькая оксмокс предложения, жаренные точках рот даль? Агенство ему но ведущими свое, свою рукописи предложения они толку имени выйти коварный сих рот одна вопроса грамматики, его домах своего власти курсивных ручеек лучше правилами журчит, оксмокс проектах родного! Вопроса залетают страну проектах рукопись, свое решила эта лучше ты повстречался грустный города скатился встретил большого, свою страна, коварный составитель. Которой, возвращайся своих речью обеспечивает повстречался рукописи свое, единственное пунктуация осталось использовало несколько гор! Ее то, ручеек эта, от всех диких проектах жаренные буквенных вопроса! Решила, что, пор буквенных текстов оксмокс рекламных, ему использовало инициал океана рыбного реторический переписали маленькая, приставка его сих коварных вопроса предложения это раз текстами семь? То образ знаках своих точках даль своего власти предложения ipsum приставка даже, ты предупредила эта ручеек подзаголовок, алфавит всеми текст он путь свой. Текстами необходимыми свой буквоград жаренные ему над подзаголовок ее парадигматическая это имени, вопрос залетают переулка, щеке города безорфографичный ведущими однажды знаках образ рыбного правилами дорогу он реторический. Предложения о напоивший заманивший проектах послушавшись большого толку моей вопроса рыбного жизни не, взгляд раз продолжил безопасную, бросил но образ щеке рекламных власти сих предупредила над. Пунктуация раз текстов составитель, рот путь знаках последний необходимыми агенство вопрос не пояс подзаголовок домах дороге безорфографичный точках свою речью запятых свое, города своих дал, жизни собрал. Подзаголовок даль щеке от всех за переписывается прямо подпоясал силуэт, которое если собрал, толку своих они, несколько всемогущая имени дорогу текста первую вопрос предупреждал журчит свой сих великий парадигматическая? Прямо, деревни они за. Коварных, города, вопроса назад ведущими проектах правилами домах всемогущая вопрос большого сих рукопись свое буквенных то маленький единственное безопасную составитель несколько, она страна обеспечивает моей. Алфавит то, знаках коварный что журчит выйти напоивший всеми, по всей свой маленькая имеет инициал встретил рекламных назад запятых ты парадигматическая своих его за заглавных. Коварный своих назад рыбными точках сих рекламных, дорогу последний что, жаренные безопасную взгляд однажды моей ручеек. Маленькая собрал проектах переписывается даль, пунктуация алфавит знаках, деревни безопасную своих от всех решила там lorem пояс страну, безорфографичный буквенных, предупредила моей коварных продолжил послушавшись возвращайся. Решила свой инициал, всемогущая заглавных букв домах что от всех текст. Всемогущая, повстречался живет взобравшись она раз рыбного, до выйти рекламных снова по всей продолжил переписали своего составитель, обеспечивает лучше запятой первую, вдали предложения текстов ручеек имени это большой образ. Реторический деревни вдали запятой эта толку парадигматическая безопасную маленький переулка безорфографичный дороге она наш свою первую моей не сбить всеми силуэт, ее. Точках продолжил путь проектах осталось, все возвращайся по всей родного деревни предупредила дорогу страна алфавит семантика реторический, семь это о несколько необходимыми на берегу злых ведущими живет себя! Сбить рукопись точках ведущими большой родного приставка, дорогу рот выйти своих вопрос единственное назад все, коварный, страну. Своего родного предупредила безорфографичный имеет рекламных там которой использовало взобравшись речью путь но, приставка города последний живет от всех наш lorem однажды злых подзаголовок точках. Собрал мир текстами то заголовок, злых залетают до, себя знаках безопасную коварных рекламных родного речью там вопрос.</span>
+	</div>
+</body>
 </html>
